--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "Abzal.Tankibayev",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "dotenv": "^8.1.0",
